--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 .divLetras {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
+    border-radius: 3%;
+    border-style: outset;
 }
 
 
 
 .letras{
-    font-size: 100px;
+    font-size: 65px;
 }
 
 .divLetrasUsadas{
